# scheduler

./: .agent-docs.yaml  .gitignore  AGENTS.md  Cargo.toml  PRODUCT.md  README.md  design-qa.md  package.json  pnpm-lock.yaml
.agents/skills/agent-docs/: SKILL.md
.agents/skills/post-implementation-knowledge-capture/: SKILL.md
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  vitest.config.ts
apps/desktop/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/desktop/app/projects/: page.tsx
apps/desktop/app/runs/: page.tsx
apps/desktop/app/settings/: page.tsx
apps/desktop/app/tasks/: page.tsx
apps/desktop/app/tasks/new/: page.tsx
apps/desktop/components/: app-link.tsx  app-shell.tsx  empty-state.tsx  field.tsx  markdown-content.tsx  page-header.tsx  run-detail.tsx  run-task-context.tsx  status-badge.tsx  task-actions.tsx  task-detail.tsx  task-run-display.tsx  task-wizard.tsx  value-badge.tsx
apps/desktop/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  radio-group.tsx  select.tsx  sheet.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx
apps/desktop/lib/: codex-options.ts  cron.ts  format.ts  ipc.ts  mock-ipc.ts  mock-long-codex-log.ts  navigation.ts  queries.ts  run-transcript.ts  task-draft.ts  timezone.ts  types.ts
apps/desktop/public/: theme-init.js
apps/desktop/scripts/: build-release.mjs  package-github-release.mjs  prepare-sidecars.mjs  static-navigation-contract.mjs  verify-release-assets.mjs  verify-release-version.mjs  verify-static-entry.mjs
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial.sql  README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/test/: app-shell.test.tsx  home-page.test.tsx  ipc.test.ts  markdown-content.test.tsx  navigation.test.tsx  providers.test.tsx  run-detail.test.tsx  run-transcript.test.ts  runs-page.test.tsx  settings.test.tsx  static-navigation-contract.test.mjs  task-actions.test.tsx  task-detail.test.tsx  task-wizard.test.tsx  tasks-page.test.tsx  test-utils.tsx  theme-init.test.ts  timezone.test.ts  types.test.ts
crates/codex-runner/: Cargo.toml
crates/codex-runner/src/: lib.rs
crates/codex-runner/tests/: runner.rs
crates/codex-runner/tests/fixtures/: dummy-codex-fail.cmd  dummy-codex-fail.sh  dummy-codex-long-summary.cmd  dummy-codex-long-summary.sh  dummy-codex-mixed-output.cmd  dummy-codex-mixed-output.sh  dummy-codex-sleep.cmd  dummy-codex-sleep.sh  dummy-codex-success.cmd  dummy-codex-success.sh
crates/schedule-cli/: Cargo.toml
crates/schedule-cli/src/: lib.rs  main.rs
crates/schedule-cli/tests/: cli.rs
crates/scheduler-core/: Cargo.toml
crates/scheduler-core/migrations/: 0001_initial.sql  0002_task_lock.sql  0003_project_worktrees.sql  0004_remove_task_description.sql  0005_fixed_execution_profile.sql  0006_global_codex_path.sql
crates/scheduler-core/src/: error.rs  lib.rs  local_transport.rs  paths.rs  settings.rs  time.rs  util.rs
crates/scheduler-core/src/db/: migrations.rs  mod.rs  repository.rs
crates/scheduler-core/src/ipc/: mod.rs
crates/scheduler-core/src/model/: dto.rs  enums.rs  ids.rs  mod.rs  tables.rs
crates/scheduler-core/src/schedule/: mod.rs
crates/scheduler-core/tests/: data_layer.rs  schedule_engine.rs
crates/schedulerd/: Cargo.toml
crates/schedulerd/src/: config.rs  daemon.rs  executor.rs  lib.rs  lock.rs  main.rs  rpc.rs
crates/schedulerd/tests/: daemon.rs
docs/: RELEASE.md
docs/spec/: architecture.md  branding.md  data-model.md  index.md  interfaces.md  platform-support.md  product-scope.md  scheduling-and-execution.md  screens.md  security-and-operations.md
docs/spec/screens/: s000-app-shell.md  s000-today.md  s001-tasks.md  s002-task-wizard.md  s003-runs.md  s004-projects.md  s005-settings.md
spec/: 00-overview.md  01-requirements.md  02-architecture.md  03-data-model.md  04-scheduler-daemon.md  05-codex-runner.md  06-schedule-cli.md  07-system-instructions.md  08-ui-ux.md  09-security-permissions.md  10-implementation-plan.md  11-references.md
