[workspace]
members = [
  "crates/scheduler-core",
  "crates/schedulerd",
  "crates/schedule-cli",
  "crates/codex-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/codex-scheduler"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
clap = { version = "=4.5.23", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
