[package]
name = "schedule-cli"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "codex-schedule"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
scheduler-core = { path = "../scheduler-core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
schedulerd = { path = "../schedulerd" }
tempfile.workspace = true
