[package]
name = "schedulerd"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "codex-schedulerd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
clap.workspace = true
codex-runner = { path = "../codex-runner" }
fs2.workspace = true
scheduler-core = { path = "../scheduler-core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7"
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
