[package]
name = "codex-scheduler-desktop"
version = "0.1.0"
description = "Clockhand desktop shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
name = "codex_scheduler_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "codex-scheduler-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
idna = "=1.0.3"
idna_adapter = "=1.0.0"
indexmap = "=2.11.4"
hashbrown = "=0.15.2"
libc = "0.2"
plist = "=1.10.0"
reqwest = { version = "=0.13.0", default-features = false }
serde_spanned = "=1.0.3"
serde.workspace = true
serde_json.workspace = true
serde_with = "=3.12.0"
scheduler-core = { path = "../../../crates/scheduler-core" }
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tokio.workspace = true
notify-rust = "=4.11.7"
mac-notification-sys = "=0.6.3"
time = "=0.3.47"
toml = { version = "=0.9.8", features = ["parse"] }
toml_datetime = "=0.7.3"
toml_parser = "=1.0.4"
toml_writer = "=1.0.4"
url = { version = "=2.5.4", features = ["serde"] }
unicode-segmentation = "=1.12.0"
uuid.workspace = true
winnow = "=0.7.13"
